feat(web-blog-rest-api): add ratings to ArticleEntity and create RatingRepository
Added ratings field to ArticleEntity and created RatingRepository. The ratings field is now an array of RatingEntity objects.
