# src/main/resources/openapi.yml
@@ -155,6 +155,10 @@ components:
             type: array
             items:
                 $ref: '#/components/schemas/Comment'
+        ratings:
+            type: array
+            items:
+                $ref: '#/components/schemas/Rating'
 
     Comment:
       type: object
@@ -178,5 +182,5 @@ components:
           format: int32
           minimum: 1
           maximum: 5
-        user:
+        author:
           type: string
